[package]
name = "mistengine"
version = "1.0.0-beta.3"
edition = "2021"

[[bin]]
name = "mistengine"
path = "src/main.rs"

[dependencies]
eframe      = { version = "0.28", features = ["default_fonts"] }
egui        = "0.28"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
log         = "0.4"
env_logger  = "0.11"
rfd         = "0.15"

sdl2        = { version = "0.37", features = ["bundled"] }

fontdue     = "0.9"

image       = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }

[profile.dev]
opt-level = 2
debug = true

[profile.dev.package."*"]
opt-level = 3
